[package]
authors = ["The Knurling-rs developers"]
categories = ["command-line-utilities", "development-tools", "embedded"]
description = "Flips the memory layout of embedded programs to protect against stack overflows"
edition = "2021"
keywords = ["arm", "cortex-m", "stack-protection"]
license = "MIT OR Apache-2.0"
name = "flip-link"
repository = "https://github.com/knurling-rs/flip-link"
version = "0.1.6"
readme = "README.md"

[dependencies]
env_logger = { version = "0.10", default-features = false }
getrandom = "0.2"
log = "0.4"
object = { version = "0.31", default-features = false, features = ["read_core", "elf", "std"] }

[dev-dependencies]
assert_cmd = "2.0"
rstest = { version = "0.18", default-features = false }

[workspace]
members = [".", "xtest"]
