[package]
authors = ["The Knurling-rs developers"]
categories = ["command-line-utilities", "development-tools", "embedded"]
description = "Flips the memory layout of embedded programs to protect against stack overflows"
edition = "2021"
keywords = ["arm", "cortex-m", "stack-protection"]
license = "MIT OR Apache-2.0"
name = "flip-link"
repository = "https://github.com/knurling-rs/flip-link"
version = "0.1.11"
readme = "README.md"

[dependencies]
env_logger = { version = "0.11", default-features = false }
evalexpr = "12"
getrandom = "0.2"
log = "0.4"
object = { version = "0.35", default-features = false, features = ["read_core", "elf", "std"] }

[dev-dependencies]
assert_cmd = "2.0"
rstest = { version = "0.19", default-features = false }

[workspace]
members = [".", "xtest"]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.27.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
