[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"
name = "test-flip-link-app"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
lm3s6965 = "0.1"
panic-semihosting = { version = "0.5", features = ["exit"] }

[workspace] # needed to exclude package from parent workspace
