[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2021"
readme = "README.md"
name = "test-flip-link-app"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }

# optional
lm3s6965 = { version = "0.1", optional = true }

[build-dependencies]
anyhow = "1.0"

[features]
default = ["lm3s6965"]

[workspace] # needed to exclude package from parent workspace
